[gd_scene load_steps=6 format=3 uid="uid://b7q8h6g7y3dlv"]

[ext_resource type="Script" path="res://scripts/Entity.gd" id="1"]
[ext_resource type="Script" path="res://scripts/components/HealthComponent.gd" id="2"]
[ext_resource type="Script" path="res://scripts/components/MovementComponent.gd" id="3"]
[ext_resource type="Script" path="res://scripts/components/CombatComponent.gd" id="4"]
[ext_resource type="Script" path="res://scripts/components/StatusEffectComponent.gd" id="5"]

[node name="Entity" type="Node2D"]
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2")

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("3")

[node name="CombatComponent" type="Node" parent="."]
script = ExtResource("4")

[node name="StatusEffectComponent" type="Node" parent="."]
script = ExtResource("5")

[node name="HealthBarBG" type="ColorRect" parent="."]
show_behind_parent = true
offset_left = -16.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = -20.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="HealthBar" type="ColorRect" parent="HealthBarBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.8, 0, 1) 